Update contact info

--- a/site-config.json
+++ b/site-config.json
@@ -67,9 +67,9 @@
       "bio": "Founder of Axionic Agency Lab. Research interests include agency theory, AI alignment, and rationality.",
       "photo": "images/david-mcfadzean.jpg",
       "links": {
-        "email": null,
-        "website": null,
-        "twitter": null,
+        "email": "davidmc@gmail.com",
+        "website": "https://www.linkedin.com/in/davidmc/",
+        "twitter": "https://x.com/macterra",
         "github": "https://github.com/macterra"
       }
     },
