Added series IX

--- a/site-config.json
+++ b/site-config.json
@@ -64,6 +64,13 @@
       "name": "Constructing Reflective Sovereign Agency",
       "description": "Minimal-agent construction program determining the minimum structure required for genuine agency above the Architectural Sovereignty Boundary.",
       "paper_prefix": "Axionic-Agency-VIII"
+    },
+    {
+      "id": "asi-sir",
+      "series": "IX",
+      "name": "Authority Beyond Persistence",
+      "description": "Post-ontological stress program evaluating whether authority survives discontinuity of identity and adversarial imitation through authorized succession (ASI) and structural impersonation resistance (SIR).",
+      "paper_prefix": "Axionic-Agency-IX"
     }
   ],
   "team": [
