Fixed series XII

--- a/site-config.json
+++ b/site-config.json
@@ -91,7 +91,7 @@
       "series": "XII",
       "name": "RSA Construction Program",
       "description": "Construction program evaluating whether a real agent can be constructed that reflects, chooses, refuses, and fails honestly once all privileged decision-making has been structurally eliminated—and records the boundary at which sovereignty becomes uninhabitable.",
-      "paper_prefix": "Axionic-Agency-XI"
+      "paper_prefix": "Axionic-Agency-XII"
     }
   ],
   "team": [
